part1/exercise-1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 3003
      protocol: TCP
      targetPort: 3000
